drag.
If an error occurs opening a directory then don't report it in an error box if
a drag-and-drop operation is in progress.
Keep the title up-to-date for iconified windows.
Option to show menu on button-1 drags instead of copying.
Aborting an action window tries to kill all child processes, not just the
immediate child, and doesn't close the window until it has actually stopped.

08-Feb-2003
~~~~~~~~~~~
Changing the icon for a MIME type updates all filer windows.
When dragging a pinboard icon over itself, pretend the icon isn't there to
allow fine repositioning.
When an error prevents scanning a directory, show the error in the window
title bar, and only report it once in an error box.
Don't create thumbnails of thumbnails by checking if the image is in
~/.thumbnails/normal. Before, the test was the size of the file, not its
location.
Pinboard image style Scale is now called Stretch; Scale now scales without
changing the aspect ratio.

07-Feb-2003
~~~~~~~~~~~
Auto-scrolling during drag-and-drop works again, and now in list view too.

02-Feb-2003
~~~~~~~~~~~
Fixed clipping and wrapping problems with pinboard icon text.

01-Feb-2003
~~~~~~~~~~~
Don't use double-buffering for the pinboard. This might make things flicker
slightly, but it's much faster on some systems.
Updated Spanish translation (Marcelo Ramos).

31-Jan-2003
~~~~~~~~~~~
Added Bookmarks 'Recently Visited' submenu (Stephen Watson).

28-Jan-2003
~~~~~~~~~~~
Replaced some of the icons with some GNOME ones (slightly modified in some
cases).

27-Jan-2003
~~~~~~~~~~~
Slightly adjusted the 'normal' icon height to be the same size as GNOME to
make sharing icons easier.
Updated Polish translation (Marcin Juszkiewicz).

26-Jan-2003
~~~~~~~~~~~
Bugfix: Symlinking to an application required the symlink, rather than the
	target directory, to have the same owner as the AppRun (Keith Warno).

25-Jan-2003
~~~~~~~~~~~
Bugfix: Hyper and Super modifiers didn't work properly as icon shortcuts.

23-Jan-2003
~~~~~~~~~~~