@@ -15,14 +15,11 @@ GtkTreeView bindings (eg, ^N) override menu bindings.
 
 File2.html comes before File.html. Also, very large numbers aren't handled.
 
-Adding a directory to the panel and then changing it to an application doesn't
-hide the text.
-
 When the minibuffer is highlighted in red, scanning more items should recheck.
 
 Escape text/uri-list.
 
-Symlinks to mount points work strangely (Daniele Peri).
+Mounting/unmounting via a symlink doesn't update the display automatically.
 
 
 			FEATURES FOR 1.3
