@@ -31,6 +31,7 @@ extern gint motion_buttons_pressed;
 extern gboolean o_no_hostnames;
 extern int spring_in_progress;
 extern Option o_dnd_spring_open, o_dnd_drag_to_icons;
+extern Option o_dnd_left_menu;
 extern const char *drop_dest_prog;
 extern const char *drop_dest_dir;
 extern const char *drop_dest_pass_through;
