@@ -12,6 +12,9 @@ Keep the title up-to-date for iconified windows.
 Option to show menu on button-1 drags instead of copying.
 Aborting an action window tries to kill all child processes, not just the
 immediate child, and doesn't close the window until it has actually stopped.
+Symlinks to mount points now work (reported by Daniele Peri).
+Bugfix: If a directory on the panel changed to/from being an application, the
+	label wasn't hidden / shown.
 
 08-Feb-2003
 ~~~~~~~~~~~
